2009-05-29	Mike Massonnet
Move the settings dialog outside

	- panel-plugin/Makefile.am:
		Build new binary xfce4-clipman-settings.
		Remove Glade dependency on the panel plugin.
	- panel-plugin/xfce4-clipman-settings.c:
		Moved all settings dialog related functions from main.c to
		this file.
	- panel-plugin/main.c:
		Make a call to xfce4-clipman-settings instead.

2009-05-29	Mike Massonnet
=== Release 1.0.2 ===

2009-06-28	Mike Massonnet
Drop inhibit option

	- panel-plugin/collector.[ch]:
		Remove inhibit property.
	- panel-plugin/main.c, panel-plugin/menu.c:
		Same here, wipe out code related to the inhibit option.

2009-05-15	Mike Massonnet
Only consider XFCE for OnlyShowIn

	- xfce4-clipman-plugin.desktop.in:
		Do not include GNOME, KDE and LXDE, it is best to show the
		Xfce Clipman Plugin only inside an XFCE menu.

2009-05-15	Mike Massonnet
Do not consider text/html as text

	- panel-plugin/collector.c(cb_clipboard_owner_change):
		Drop check on text/html atom.

2009-05-14	Mike Massonnet
=== Release 1.0.1 ===

2009-05-14	Mike Massonnet
Ask the user if the clipboard manager should be restarted

	- panel-plugin/main.c(update_autostart_file):
		New function to set the Hidden key to true or false.
	- panel-plugin/main.c(cb_status_icon_quit):
		Ask the user if the manager should be restarted.

2009-04-26	Mike Massonnet
Rename "Add selections" to "Sync selections"

	- panel-plugin/settings-dialog.glade:
		Rename the option Add selections.

2009-04-25	Mike Massonnet
Make strings in authors about dialog translatable

	- panel-plugin/main.c(plugin_about):
		Don't declare static strings cause gettext isn't usable this
		way.

2009-04-24	Mike Massonnet
Proper block/unblock menu functions and fix locale bug

	- panel-plugin/main.c:
		Add new functions plugin_block_menu/unblock_menu to block the
		popup menu of the status icon in a proper way.
	- panel-plugin/main.c(plugin_about):
		Drop the macro XFCE_LICENSE_GPL in favor of a static text.
		Fixes bug #5285.
